# QuantumThink

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: agent.yaml
docs/: architecture.md  roadmap.md
examples/: quickstart.py
scripts/: bootstrap.sh
src/quantumthink/: __init__.py  __main__.py  cli.py  config.py  types.py
src/quantumthink/agent/: __init__.py  core.py  planner.py
src/quantumthink/llm/: __init__.py  base.py  mock.py  openai_client.py
src/quantumthink/memory/: __init__.py  store.py
src/quantumthink/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  registry.py
tests/: test_agent.py  test_calculator.py  test_planner.py
